--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-tools",
-  "version": "3.4.2",
+  "version": "3.4.3",
   "description": "Command line tool for creating and publishing visuals for Power BI",
   "main": "./lib/VisualPackage.js",
   "scripts": {
@@ -61,7 +61,7 @@
     "mini-css-extract-plugin": "^1.4.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "powerbi-visuals-webpack-plugin": "^2.3.1",
+    "powerbi-visuals-webpack-plugin": "^3.0.0",
     "process": "^0.11.10",
     "punycode": "^2.1.1",
     "querystring-es3": "^0.2.1",
@@ -83,7 +83,7 @@
     "webpack-dev-server": "^4.1.0"
   },
   "devDependencies": {
-    "eslint": "6.8.0",
+    "eslint": "^7.31.0",
     "jasmine": "3.5.0",
     "jasmine-spec-reporter": "5.0.1",
     "semver": "7.1.3",
